tests/fixtures/invalid/oct_list.py
# Cannot call oct() with List[int]
x = oct([1, 2, 3])
